@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2020 Hasan Demirtaş
+ * Copyright (c) 2021 Hasan Demirtaş
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -28,8 +28,14 @@ package io.github.portlek.bukkititembuilder.util;
 import com.cryptomorin.xseries.SkullUtils;
 import com.cryptomorin.xseries.XEnchantment;
 import com.cryptomorin.xseries.XMaterial;
-import io.github.portlek.bukkitversion.BukkitVersion;
-import java.util.*;
+import io.github.portlek.bukkititembuilder.Builder;
+import java.util.ArrayDeque;
+import java.util.Collection;
+import java.util.Deque;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 import org.bukkit.Material;
 import org.bukkit.inventory.ItemFlag;
@@ -38,51 +44,88 @@ import org.bukkit.inventory.meta.SkullMeta;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+/**
+ * a class that contains utility methods for {@link ItemStack} to serialize and deserialize.
+ */
 public final class ItemStackUtil {
 
+  /**
+   * the amount keys.
+   */
   private static final String[] AMOUNT_KEYS = {"amount", "quantity", "miktar"};
 
+  /**
+   * the damage key.
+   */
   private static final String[] DAMAGE_KEYS = {"damage", "durability"};
 
+  /**
+   * the data keys.
+   */
   private static final String[] DATA_KEYS = {"data"};
 
+  /**
+   * the display name keys.
+   */
   private static final String[] DISPLAY_NAME_KEYS = {"name", "display", "display-name", "isim", "ad"};
 
+  /**
+   * the enchantment keys.
+   */
   private static final String[] ENCHANTMENT_KEYS = {"enchants", "enchantments", "enchant", "enchantment", "büyü", "büyüler"};
 
+  /**
+   * the flag keys.
+   */
   private static final String[] FLAG_KEYS = {"flags", "flag"};
 
-  private static final String[] LORE_KEYS = {"lore", "açıklama"};
+  /**
+   * the lore keys.
+   */
+  private static final String[] LORE_KEYS = {"lore", "açıklama", "aciklama"};
 
+  /**
+   * the material keys.
+   */
   private static final String[] MATERIAL_KEYS = {"material", "mat", "esya", "eşya", "id"};
 
+  /**
+   * the skull texture keys.
+   */
   private static final String[] SKULL_TEXTURE_KEYS = {"skull", "skull-texture", "texture", "skin"};
 
-  private static final int VERSION = new BukkitVersion()
-    .minor();
-
+  /**
+   * ctor.
+   */
   private ItemStackUtil() {
   }
 
+  /**
+   * deserializes the given map into {@link ItemStack}.
+   *
+   * @param map the map to deserialize.
+   *
+   * @return deserialized item stack instance.
+   */
   @NotNull
-  public static Optional<ItemStack> from(@NotNull final Map<String, Object> map) {
-    final Optional<String> materialStringOptional =
+  public static Optional<ItemStack> deserialize(@NotNull final Map<String, Object> map) {
+    final var materialStringOptional =
       ItemStackUtil.getOrDefault(map, String.class, ItemStackUtil.MATERIAL_KEYS);
-    if (!materialStringOptional.isPresent()) {
+    if (materialStringOptional.isEmpty()) {
       return Optional.empty();
     }
-    final String materialString = materialStringOptional.get();
+    final var materialString = materialStringOptional.get();
     @Nullable final Material material;
-    if (ItemStackUtil.VERSION > 7) {
-      final Optional<XMaterial> xmaterialoptional = XMaterial.matchXMaterial(materialString);
-      if (!xmaterialoptional.isPresent()) {
+    if (Builder.VERSION > 7) {
+      final var xMaterialOptional = XMaterial.matchXMaterial(materialString);
+      if (xMaterialOptional.isEmpty()) {
         return Optional.empty();
       }
-      final Optional<Material> mtrloptnl = Optional.ofNullable(xmaterialoptional.get().parseMaterial());
-      if (!mtrloptnl.isPresent()) {
+      final var materialOptional = Optional.ofNullable(xMaterialOptional.get().parseMaterial());
+      if (materialOptional.isEmpty()) {
         return Optional.empty();
       }
-      material = mtrloptnl.get();
+      material = materialOptional.get();
     } else {
       material = Material.getMaterial(materialString);
     }
@@ -93,7 +136,7 @@ public final class ItemStackUtil {
       .map(Number::intValue)
       .orElse(1);
     final ItemStack itemStack;
-    if (ItemStackUtil.VERSION < 13) {
+    if (Builder.VERSION < 13) {
       itemStack = new ItemStack(material, amount);
       ItemStackUtil.getOrDefault(map, Number.class, ItemStackUtil.DAMAGE_KEYS)
         .map(Number::shortValue)
@@ -137,29 +180,36 @@ public final class ItemStackUtil {
     return Optional.of(itemStack);
   }
 
+  /**
+   * serializes the given {@link ItemStack} into a map.
+   *
+   * @param itemStack the item stack to serialize.
+   *
+   * @return serialized map.
+   */
   @NotNull
-  public static Map<String, Object> to(@NotNull final ItemStack itemStack) {
-    final Map<String, Object> map = new HashMap<>();
-    final String materialKey = ItemStackUtil.MATERIAL_KEYS[0];
-    final String amountKey = ItemStackUtil.AMOUNT_KEYS[0];
-    final String damageKey = ItemStackUtil.DAMAGE_KEYS[0];
-    final String dataKey = ItemStackUtil.DATA_KEYS[0];
-    final String displayNameKey = ItemStackUtil.DISPLAY_NAME_KEYS[0];
-    final String loreKey = ItemStackUtil.LORE_KEYS[0];
-    final String enchantmentKey = ItemStackUtil.ENCHANTMENT_KEYS[0];
-    final String flagKey = ItemStackUtil.FLAG_KEYS[0];
+  public static Map<String, Object> serialize(@NotNull final ItemStack itemStack) {
+    final var map = new HashMap<String, Object>();
+    final var materialKey = ItemStackUtil.MATERIAL_KEYS[0];
+    final var amountKey = ItemStackUtil.AMOUNT_KEYS[0];
+    final var damageKey = ItemStackUtil.DAMAGE_KEYS[0];
+    final var dataKey = ItemStackUtil.DATA_KEYS[0];
+    final var displayNameKey = ItemStackUtil.DISPLAY_NAME_KEYS[0];
+    final var loreKey = ItemStackUtil.LORE_KEYS[0];
+    final var enchantmentKey = ItemStackUtil.ENCHANTMENT_KEYS[0];
+    final var flagKey = ItemStackUtil.FLAG_KEYS[0];
     map.put(materialKey, itemStack.getType().toString());
     map.put(amountKey, itemStack.getAmount());
     if ((int) itemStack.getDurability() != 0) {
       map.put(damageKey, (int) itemStack.getDurability());
     }
-    if (ItemStackUtil.VERSION < 13) {
+    if (Builder.VERSION < 13) {
       Optional.ofNullable(itemStack.getData())
         .filter(materialData -> (int) materialData.getData() != 0)
         .ifPresent(materialData ->
           map.put(dataKey, (int) materialData.getData()));
     }
-    final String skullTextureKey = ItemStackUtil.SKULL_TEXTURE_KEYS[0];
+    final var skullTextureKey = ItemStackUtil.SKULL_TEXTURE_KEYS[0];
     Optional.ofNullable(itemStack.getItemMeta()).ifPresent(itemMeta -> {
       if (itemMeta instanceof SkullMeta) {
         Optional.ofNullable(SkullUtils.getSkinValue(itemMeta)).ifPresent(s ->
@@ -173,14 +223,14 @@ public final class ItemStackUtil {
           lore.stream()
             .map(s -> s.replace("§", "&"))
             .collect(Collectors.toList())));
-      final Set<ItemFlag> flags = itemMeta.getItemFlags();
+      final var flags = itemMeta.getItemFlags();
       if (!flags.isEmpty()) {
         map.put(flagKey, flags.stream()
           .map(Enum::name)
           .collect(Collectors.toList()));
       }
     });
-    final Map<String, Integer> enchantments = new HashMap<>();
+    final var enchantments = new HashMap<String, Integer>();
     itemStack.getEnchantments().forEach((enchantment, integer) ->
       enchantments.put(enchantment.getName(), integer));
     if (!enchantments.isEmpty()) {
@@ -189,23 +239,43 @@ public final class ItemStackUtil {
     return map;
   }
 
+  /**
+   * gets value at the given keys from the map.
+   *
+   * @param map the map to get.
+   * @param tClass the t class to get.
+   * @param keys the keys to get.
+   * @param <T> type of the getting value.
+   *
+   * @return value.
+   */
   @NotNull
   private static <T> Optional<T> getOrDefault(@NotNull final Map<String, Object> map, @NotNull final Class<T> tClass,
-                                       @NotNull final String... keys) {
-    return ItemStackUtil.getOrDefault(map, tClass, new LinkedList<>(Arrays.asList(keys)));
+                                              @NotNull final String... keys) {
+    return ItemStackUtil.getOrDefault(map, tClass, new ArrayDeque<>(List.of(keys)));
   }
 
+  /**
+   * gets value at the given keys from the map.
+   *
+   * @param map the map to get.
+   * @param tClass the t class to get.
+   * @param keys the keys to get.
+   * @param <T> type of the getting value.
+   *
+   * @return value.
+   */
   @NotNull
-  private static  <T> Optional<T> getOrDefault(@NotNull final Map<String, Object> map, @NotNull final Class<T> tClass,
-                                       @NotNull final LinkedList<String> keys) {
-    final String key = keys.pollFirst();
+  private static <T> Optional<T> getOrDefault(@NotNull final Map<String, Object> map, @NotNull final Class<T> tClass,
+                                              @NotNull final Deque<String> keys) {
+    final var key = keys.poll();
     if (key == null) {
       return Optional.empty();
     }
     if (!map.containsKey(key)) {
       return ItemStackUtil.getOrDefault(map, tClass, keys);
     }
-    final Object object = map.get(key);
+    final var object = map.get(key);
     if (tClass.isAssignableFrom(object.getClass())) {
       // noinspection unchecked
       return Optional.of((T) object);
